--- a/index.html
+++ b/index.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Script</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <!-- Content if needed -->
-</body>
-</html>
+<!-- HTML placeholder -->
+<div id="highlight-kanban-columns"></div>
